[Abhinav Tomar] Refactored UC18